# rmvenv

./: .gitignore  README.md  clean  pyproject.toml  rmenv
src/: rmvenv  rmvenv.py
